; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_iso.c_hpsb_iso_wake.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_iso.c_hpsb_iso_wake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_iso = type { i32 (%struct.hpsb_iso*)*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hpsb_iso_wake(%struct.hpsb_iso* %0) #0 {
  %2 = alloca %struct.hpsb_iso*, align 8
  store %struct.hpsb_iso* %0, %struct.hpsb_iso** %2, align 8
  %3 = load %struct.hpsb_iso*, %struct.hpsb_iso** %2, align 8
  %4 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %3, i32 0, i32 1
  %5 = call i32 @wake_up_interruptible(i32* %4)
  %6 = load %struct.hpsb_iso*, %struct.hpsb_iso** %2, align 8
  %7 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %6, i32 0, i32 0
  %8 = load i32 (%struct.hpsb_iso*)*, i32 (%struct.hpsb_iso*)** %7, align 8
  %9 = icmp ne i32 (%struct.hpsb_iso*)* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.hpsb_iso*, %struct.hpsb_iso** %2, align 8
  %12 = getelementptr inbounds %struct.hpsb_iso, %struct.hpsb_iso* %11, i32 0, i32 0
  %13 = load i32 (%struct.hpsb_iso*)*, i32 (%struct.hpsb_iso*)** %12, align 8
  %14 = load %struct.hpsb_iso*, %struct.hpsb_iso** %2, align 8
  %15 = call i32 %13(%struct.hpsb_iso* %14)
  br label %16

16:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
